Fix rrb loading Fix search queryID Fix Tooltip error Align local storage ids

--- a/src/modules/flex_data/flex_data.scss
+++ b/src/modules/flex_data/flex_data.scss
@@ -68,6 +68,12 @@
       display: none;
     }
 
+    &.hidden {
+      .mdl-flex-data__results-generic {
+        display: none;
+      }
+    }
+
     .mdl-flex-data__results-generic {
       padding-bottom: $sizeLarge;
     }
